add image constrution

--- a/.env
+++ b/.env
@@ -30,5 +30,5 @@ APP_SECRET=bf9e3393a5fc7bc330fa41a5bb06df81
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="postgresql://postgres:jozinss93@127.0.0.1:5432/db_conf?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
